Do not allow starting stores by default that does not have transaction logs.
Introduce additional setting to force recovery of such stores.
Add additional metadata store field and store date of last forced recovery.